Revert to original jenkins file